--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+preferences = "1.1"
+actix-web = "3"
+[dependencies.gtk]
+version = "0.9"
+features = ["v3_16"]
+
