--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 preferences = "1.1"
 actix-web = "3"
+serde = "1.0"
 [dependencies.gtk]
 version = "0.9"
 features = ["v3_16"]
