--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 preferences = "1.1"
 actix-web = "3"
 serde = "1.0"
+rand = "0.8"
 [dependencies.gtk]
 version = "0.9"
 features = ["v3_16"]
