--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ edition = "2018"
 [dependencies]
 preferences = "1.1"
 actix-web = "3"
-serde = "1.0"
+serde = "0.9"
+serde_derive = "0.9"
 glib = "0.10"
 rand = "0.8"
 [dependencies.gtk]
