--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,14 @@ edition = "2018"
 
 [dependencies]
 preferences = "1.1"
-actix-web = "3"
+actix-web = "3.3"
+actix-files = "0.5"
 serde = "0.9"
 serde_derive = "0.9"
 glib = "0.10"
 rand = "0.8"
 crossbeam-channel = "0.5"
+futures-executor = "0.3"
 [dependencies.gtk]
 version = "0.9"
 features = ["v3_24"]
