Update the 'about window' and extend version info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "filend"
-version = "0.1.0"
+version = "0.1.0-alpha"
 authors = ["hgonomeg <hgonomeg@gmail.com>"]
 edition = "2018"
 
